--- a/resources/scss/books.scss
+++ b/resources/scss/books.scss
@@ -1,5 +1,5 @@
-@import './components/document.scss';
-@import './components/header.scss';
+@import "./components/document.scss";
+@import "./components/header.scss";
 
-
-@import './pages/book-browser.scss';
+@import "./pages/book-browser.scss";
+@import "./pages/book-index.scss";
