--- a/resources/scss/pages/book-browser.scss
+++ b/resources/scss/pages/book-browser.scss
@@ -1,4 +1,4 @@
-.book-browser{
+.book-browser {
     display: flex;
 }
 
@@ -7,13 +7,14 @@
     border-right: 1px solid #999999;
     margin-right: 1em;
     padding: 1em;
+    width: 15em;
+    flex-shrink: 0;
 
     h2 {
         font-size: 1rem;
     }
 
     &__categories {
-
     }
 
     &__category {
@@ -23,7 +24,6 @@
 }
 
 .book-list {
-
     &__more {
         background-color: green;
         color: white;
@@ -32,17 +32,32 @@
         display: inline-flex;
         cursor: pointer;
     }
+
+    &__list {
+        display: flex;
+        flex-flow: row wrap;
+        > * {
+            width: 20%;
+        }
+    }
 }
 
 .list-book {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 
     &__image {
         order: -1;
-        margin-right: 1em;
+        margin-right: 0.5em;
 
         img {
             width: 5em;
         }
+    }
+
+    &__title {
+        font-size: 0.785em;
     }
 }
